Tuning Spark temp